@@ -22,8 +22,40 @@ FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
 DEALINGS IN THE SOFTWARE.
 
 --------------------------------------------------------------------------
-GDAL Calculations contains the following scripts from the 
-GDAL/OGR Test Suite. Their licenses are reproduced below.
+GDAL Calculations contains code from third parties 
+Their licenses are reproduced below.
+--------------------------------------------------------------------------
+
+--------------------------------------------------------------------------
+MetaGETA
+--------------------------------------------------------------------------
+gdal_calculations/geometry.py
+Modified for gdal_calculations, original license:
+
+Copyright (c) 2013 Australian Government, Department of Sustainability, 
+Environment, Water, Population and Communities.
+
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in
+all copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
+THE SOFTWARE.
+
+
+--------------------------------------------------------------------------
+GDAL/OGR Test Suite.
 --------------------------------------------------------------------------
 autotest/run_all.py
 autotest/pymod/gdaltest.py
