@@ -1,5 +1,6 @@
 # -*- coding: utf-8 -*-
-# Copyright (c) 2013 DSEWPaC
+# Copyright (c) 2013 Australian Government, Department of Sustainability, 
+# Environment, Water, Population and Communities.
 #
 # Permission is hereby granted, free of charge, to any person obtaining a copy
 # of this software and associated documentation files (the "Software"), to deal
